--- a/js-fundamentals/rockPaperScissors/index.html
+++ b/js-fundamentals/rockPaperScissors/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div id="results">
-        <h1>The winner is:</h1>
+        <h1>The winner is:<h2 id="gameResult"></h2></h1>
     </div>
 </body>
 </html>
