added counters for RPS

--- a/js-fundamentals/rockPaperScissors/index.html
+++ b/js-fundamentals/rockPaperScissors/index.html
@@ -24,6 +24,18 @@
     </div>
     <div id="results">
         <h1>The winner is:<h2 id="gameResult"></h2></h1>
+        <div id="counters">
+            <div id="playerWinsGames">
+                <h1>Player Wins: <h2 id="playerWins"></h2></h1>
+            </div>
+            <div id="computerWinsGames">
+                <h1>Computer Wins: <h2 id="computerWins"></h2></h1>
+            </div>
+            <div id="tieGames">
+                <h1>Ties: <h2 id="ties"></h2></h1>
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
