--- a/js-fundamentals/rockPaperScissors/index.html
+++ b/js-fundamentals/rockPaperScissors/index.html
@@ -8,34 +8,38 @@
     <link rel="stylesheet" href="styles.css">
     <script defer type="text/javascript" src="script.js"></script>
 </head>
-<body>
+<body>        
+    <div id="rpsButtons">
+        <button id="rockBtn">Rock</button>
+        <button id="paperBtn">Paper</button>
+        <button id="scissorsBtn">Scissors</button>
+    </div>
     <div id="main">
-        <div id="rpsButtons">
-            <button id="rockBtn">Rock</button>
-            <button id="paperBtn">Paper</button>
-            <button id="scissorsBtn">Scissors</button>
-        </div>
         <div id="playerSelection">
-            <h1>Player chooses: <h2 id="playerChoice"></h2></h1>
+            <h1 id="choiceTitle">Player Choice<h1 id="playerChoice"></h1></h1>
         </div>
         <div id="computerSelection">
-            <h1>Computer chooses: <h2 id="computerChoice"></h2></h1>
+            <h1 id="choiceTitle">Computer Choice<h1 id="computerChoice"></h1></h1>
         </div>
     </div>
     <div id="results">
-        <h1>The winner is:<h2 id="gameResult"></h2></h1>
+        <h1 id="gameResult"></h1>
         <div id="counters">
             <div id="playerWinsGames">
-                <h1>Player Wins: <h2 id="playerWins"></h2></h1>
+                <h1 id="resultTitle">Win<h2 id="playerWins"></h2></h1>
             </div>
             <div id="computerWinsGames">
-                <h1>Computer Wins: <h2 id="computerWins"></h2></h1>
+                <h1 id="resultTitle">Lose<h2 id="computerWins"></h2></h1>
             </div>
             <div id="tieGames">
-                <h1>Ties: <h2 id="ties"></h2></h1>
+                <h1 id="resultTitle">Tie<h2 id="ties"></h2></h1>
             </div>
-            
         </div>
+    </div>
+    <div id="gameCount">
+        <div id="gameCounter">
+            <h1 id="totalTitle">Total Games Played <h2 id="totalGames"></h2></h1>
+       </div> 
     </div>
 </body>
 </html>
